objects/Brand__c.object
<CustomObject>
    <fields>
        <fullName>AMM__c</fullName>
        <label>AMM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveBranch2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveBranch2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActiveBranchWinery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveBranchWinery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActiveBrand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveBrand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGM__c</fullName>
        <label>BGM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Categorization__c</fullName>
        <label>Brand Categorization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Code_Legal__c</fullName>
        <description>Brand Code is a 3 character code that represents a brand. (i.e., &quot;Gaja&quot; brand has code of &quot;GAJ&quot;). The Brand Code is created by accounting if one does not exist.</description>
        <externalId>true</externalId>
        <inlineHelpText>Brand Code is a 3 character code that represents a brand. (i.e., &quot;Gaja&quot; brand has code of &quot;GAJ&quot;). The Brand Code is created by accounting if one does not exist.</inlineHelpText>
        <label>Brand Code (Legal)</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Brand_Code_Marketing__c</fullName>
        <description>Brand Code is a 3 character code that represents a brand. (i.e., &quot;Gaja&quot; brand has code of &quot;GAJ&quot;). The Brand Code is created by accounting if one does not exist.</description>
        <externalId>true</externalId>
        <inlineHelpText>Brand Code is a 3 character code that represents a brand. (i.e., &quot;Gaja&quot; brand has code of &quot;GAJ&quot;). The Brand Code is created by accounting if one does not exist.</inlineHelpText>
        <label>Brand Code (Marketing)</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Brand_Detail__c</fullName>
        <label>Brand Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Name_Legal__c</fullName>
        <description>Legal brand name.</description>
        <label>Brand Name (Legal)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capsule__c</fullName>
        <label>Capsule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Transitioned__c</fullName>
        <label>Date Transitioned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Updated_In_JDE__c</fullName>
        <label>Date Updated In JDE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Divistion__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>CRU</fullName>
                </value>
                <value>
                    <fullName>TB Artisan Spirits</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flagship_Product__c</fullName>
        <label>Flagship Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Founded__c</fullName>
        <description>Year Brand was founded</description>
        <inlineHelpText>Year Brand was founded</inlineHelpText>
        <label>Founded</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Diver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Diver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <label>Location Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Country__c</fullName>
        <label>Location Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Latitude__c</fullName>
        <label>Location Latitude</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location_Longitude__c</fullName>
        <label>Location Longitude</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location_StateProvince__c</fullName>
        <label>Location State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Text__c</fullName>
        <label>Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_ZipPostal_Code__c</fullName>
        <label>Location Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Marketing Executive in charge of this brand.</description>
        <inlineHelpText>The Marketing Executive in charge of this brand.</inlineHelpText>
        <label>Marketing Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Marketing Manager that is managing this brand.</description>
        <label>Marketing Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Manager_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Related_Suppliers__c</fullName>
        <label>No. of Related Suppliers</label>
        <summaryForeignKey>Supplier_Brand_Association__c.Brand__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overview_Summary__c</fullName>
        <label>Overview Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ownership_Summary__c</fullName>
        <label>Ownership Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Category__c</fullName>
        <label>PR Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>NAPAVALLEY</fullName>
                </value>
                <value>
                    <fullName>TRINIDADANDTOBAGO</fullName>
                </value>
                <value>
                    <fullName>SONOMAVALLEY</fullName>
                </value>
                <value>
                    <fullName>NAPAANDSONOMAVALLEY</fullName>
                </value>
                <value>
                    <fullName>SANTABARBARACOUNTY</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>OREGON</fullName>
                </value>
                <value>
                    <fullName>WASHINGTON</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>CHILE</fullName>
                </value>
                <value>
                    <fullName>ENGLAND</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>GREECE</fullName>
                </value>
                <value>
                    <fullName>ITALY</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>MEDITERRANIEAN</fullName>
                </value>
                <value>
                    <fullName>MEXICO</fullName>
                </value>
                <value>
                    <fullName>NEWZEALAND</fullName>
                </value>
                <value>
                    <fullName>PANAMA</fullName>
                </value>
                <value>
                    <fullName>PORTUGAL</fullName>
                </value>
                <value>
                    <fullName>SCOTLAND</fullName>
                </value>
                <value>
                    <fullName>SOUTHAFRICA</fullName>
                </value>
                <value>
                    <fullName>SPAIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Point__c</fullName>
        <label>Price Point</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Samples_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Samples Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SelectionID__c</fullName>
        <label>SelectionID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Selection</fullName>
                </value>
                <value>
                    <fullName>EDF</fullName>
                </value>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>FGL</fullName>
                </value>
                <value>
                    <fullName>FLM</fullName>
                </value>
                <value>
                    <fullName>FRZ</fullName>
                </value>
                <value>
                    <fullName>HAZ</fullName>
                </value>
                <value>
                    <fullName>HST</fullName>
                </value>
                <value>
                    <fullName>INA</fullName>
                </value>
                <value>
                    <fullName>OBS</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>PIN</fullName>
                </value>
                <value>
                    <fullName>PRM</fullName>
                </value>
                <value>
                    <fullName>REF</fullName>
                </value>
                <value>
                    <fullName>SDF</fullName>
                </value>
                <value>
                    <fullName>SIN</fullName>
                </value>
                <value>
                    <fullName>SPR</fullName>
                </value>
                <value>
                    <fullName>TOX</fullName>
                </value>
                <value>
                    <fullName>USF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selection__c</fullName>
        <label>Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>PRM</fullName>
                </value>
                <value>
                    <fullName>CRU</fullName>
                </value>
                <value>
                    <fullName>SPR</fullName>
                </value>
                <value>
                    <fullName>FAB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terlato_Representation_Since__c</fullName>
        <description>Year the Brand has been represented by Terlato since</description>
        <inlineHelpText>Year the Brand has been represented by Terlato since</inlineHelpText>
        <label>Terlato Representation Since</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Materials_Link__c</fullName>
        <label>Trade Materials Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vineyard__c</fullName>
        <label>Vineyard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Link__c</fullName>
        <label>Website Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Z_deprecated_Selection__c</fullName>
        <label>Deprecated Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Selc Description</fullName>
                </value>
                <value>
                    <fullName>Blank -Shipping Condition 41/C</fullName>
                </value>
                <value>
                    <fullName>Defunct Estate Selections</fullName>
                </value>
                <value>
                    <fullName>Inactive Estate Selections</fullName>
                </value>
                <value>
                    <fullName>Estate Selections</fullName>
                </value>
                <value>
                    <fullName>Fragile Materials</fullName>
                </value>
                <value>
                    <fullName>Flammable Materials</fullName>
                </value>
                <value>
                    <fullName>Frozen Materials</fullName>
                </value>
                <value>
                    <fullName>Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Historical Selections</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Defunct Premier Selections</fullName>
                </value>
                <value>
                    <fullName>Inactive Premier Selections</fullName>
                </value>
                <value>
                    <fullName>Premier Selections</fullName>
                </value>
                <value>
                    <fullName>Refrigerated Materials</fullName>
                </value>
                <value>
                    <fullName>Defunct Spirits Selections</fullName>
                </value>
                <value>
                    <fullName>Inactive Spirits Selections</fullName>
                </value>
                <value>
                    <fullName>Spirits Selections</fullName>
                </value>
                <value>
                    <fullName>Toxic Materials</fullName>
                </value>
                <value>
                    <fullName>USF Selections</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Brand</label>
    <nameField>
        <label>Brand Name (Marketing)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>